@@ -280,6 +280,9 @@ const char *ts_help_set[] = {
 	"    \2JOINHELPCHAN <on/off>\2	- Should SecureServ join the help channel when there is at least one helper logged in",
 	"    \2MULTICHECK <on/off>\2    - Makes SecureServ check all Patterns when an infected User is found.",
 	"                                 Please Read the Readme file for important Performance information",
+	"    \2MONCHANCYCLE <on/off>\2  - Should the monitor bot cycle the channels occasionally",
+	"    \2MONCHANCYCLETIME <seconds>\2 ",
+	"                               - How often should the Monitor bot cycle a single channel",
 	"    \2VERBOSE <on/off>\2       - Turn on Verbose Mode. Prepare to be flooded!",
 	"    \2CYCLETIME <seconds>\2    - How Often Should SecureServ check new channels for infections.",
 	"                                 See the Readme file for recommended Settings",
